<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fragment_home_logged_in_placeholder">Hi, Sebastian</string>

    <string name="fragment_home_headline">What we\'ll cook <b>today?</b></string>
    <string name="fragment_home_search">Search…</string>
    <string name="fragment_home_search_search_recipes">Find your recipe</string>
    <string name="fragment_home_search_not_found">No matching recipes found</string>
    <string name="fragment_home_label">Recipes</string>
    <string name="fragment_home_random">Random</string>
    <string name="fragment_home_recipe_saved">Recipe has been added to the saved list</string>

    <string-array name="fragment_home_mealtypes">
        <item>Random</item>
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Salad</item>
        <item>Soup</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>

    <string name="fragment_details_dish_type">🍽 %1$s</string>
    <string name="fragment_details_duration">⏱ %1$s minutes</string>
    <string name="fragment_details_meal_servings">🍲 dish for %1$s portions</string>
    <string name="fragment_details_description">Description</string>
    <string name="fragment_details_nutrients">Nutritional values</string>
    <string name="fragment_details_calories">Calories</string>
    <string name="fragment_details_proteins">Proteins</string>
    <string name="fragment_details_fats">Fats</string>
    <string name="fragment_details_carbohydrates">Carbohydrates</string>
    <string name="fragment_details_ingredients">Ingredients</string>
    <string name="fragment_details_show_more">Show more…</string>
    <string name="fragment_details_show_less">Show less…</string>
    <string name="fragment_details_see_instructions">Check out the steps to prepare this recipe</string>

    <string name="fragment_instructions_headline">Recipe instructions</string>
</resources>

