<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_big">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/saveButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/margin_big"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recipeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            tools:text="Spaghetti with Shrimp Sauce" />

        <LinearLayout
            android:id="@+id/dishInfoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeNameTextView">

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/dishTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_big"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="🍽️ Lunch" />

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="⏱️ 45 minut" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageContainer"
            android:layout_width="0dp"
            android:layout_height="205dp"
            android:layout_marginTop="@dimen/margin_xbig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dishInfoContainer">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:src="@drawable/recipe_placeholder" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.emoji2.widget.EmojiTextView
            android:id="@+id/servingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageContainer"
            tools:text="🍲 danie na 2 porcje" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/fragment_details_description"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servingsTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionHeader"
            tools:text="Pasta with Garlic, Scallions, Cauliflower Breadcrumbs might be a good recipe to expand your main course repertoire. One portion of this dish contains approximately 19g of protein and a total of 584 calories. Decided więcej..." />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nutritionDataHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/fragment_details_nutrients"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <LinearLayout
            android:id="@+id/caloriesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutritionDataHeader">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_calories"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/caloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/fragment_details_calories"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="🔥 586 kcal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/proteinsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/fatsContainer"
            app:layout_constraintStart_toEndOf="@id/caloriesContainer"
            app:layout_constraintTop_toBottomOf="@id/nutritionDataHeader">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_proteins"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/proteinsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/fragment_details_calories"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="🍗 19g" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fatsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/carbohydratesContainer"
            app:layout_constraintStart_toEndOf="@id/proteinsContainer"
            app:layout_constraintTop_toBottomOf="@id/nutritionDataHeader">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_fats"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/fatsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/fragment_details_calories"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="🍖 41g" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/carbohydratesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutritionDataHeader">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_carbohydrates"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/carbohydratesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/fragment_details_calories"
                android:textAppearance="?attr/textAppearanceBodySmall"
                tools:text="🫙 41g" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ingredientsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/fragment_details_ingredients"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caloriesContainer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsLabel"
            tools:itemCount="5"
            tools:listitem="@layout/item_ingredient" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
